--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,25 +12,90 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MahasiswaDeleteActivity"></activity>
-        <activity android:name=".MahasiswaUpdateActivity" />
-        <activity android:name=".MahasiswaAddActivity" />
-        <activity android:name=".MahasiswaGetAllActivity" />
-        <activity
-            android:name=".MainMhsActivity"
-            android:label="Menu Crud Mahasiswa">
+
+
+<!--        <activity-->
+<!--            android:name=".LoginActivity"-->
+<!--            android:label="@string/title_activity_login">-->
+<!--        </activity>-->
+
+
+<!--        <activity android:name=".HalamanUtamaActivity" />-->
+
+<!--        <activity android:name=".SplashActivity">-->
+
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+<!--        <activity android:name=".PrefActivity" />-->
+
+
+<!--        <activity android:name=".MahasiswaDeleteActivity" />-->
+<!--        <activity android:name=".MahasiswaUpdateActivity" />-->
+<!--        <activity android:name=".MahasiswaAddActivity" />-->
+<!--        <activity android:name=".MahasiswaGetAllActivity" />-->
+<!--        <activity-->
+<!--            android:name=".MainMhsActivity"-->
+<!--            android:label="Menu Crud Mahasiswa" />-->
+<!--        <activity android:name=".DosenDeleteActivity" />-->
+<!--        <activity android:name=".DosenUpdateActivity" />-->
+<!--        <activity android:name=".DosenAddActivity" />-->
+<!--        <activity android:name=".DosenGetAllActivity" />-->
+<!--        <activity-->
+<!--            android:name=".MainDsnActivity"-->
+<!--            android:label="Menu Crud Dosen" />-->
+<!--        <activity android:name=".MatkulDeleteActivity" />-->
+<!--        <activity android:name=".MatkulUpdateActivity" />-->
+<!--        <activity android:name=".MatkulAddActivity" />-->
+<!--        <activity android:name=".MatkulGetAllActivity" />-->
+<!--        <activity-->
+<!--            android:name=".MainMatkulActivity"-->
+<!--            android:label="Menu Crud Matkul" />-->
+<!--        <activity android:name=".CardActivity" />-->
+<!--        <activity android:name=".RecyclerActivity" />-->
+<!--        <activity android:name=".ListActivity" />-->
+<!--        <activity android:name=".TrackerActivity" />-->
+<!--        <activity android:name=".HelpActivity" />-->
+<!--        <activity android:name=".DebuggingActivity" />-->
+<!--        <activity android:name=".MainActivity" />-->
+
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".HalamanUtamaActivity" />
+        <activity android:name=".MainMatkulActivity" />
+        <activity android:name=".MatkulDeleteActivity" />
+        <activity android:name=".MatkulUpdateActivity" />
+        <activity android:name=".MatkulGetAllActivity" />
+        <activity android:name=".MatkulAddActivity" />
+        <activity android:name=".DosenDeleteActivity" />
+        <activity android:name=".DosenAddActivity" />
+        <activity android:name=".DosenUpdateActivity" />
+
+        <activity android:name=".DosenGetAllActivity" />
+        <activity android:name=".MainDsnActivity" />
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PrefActivity" />
+        <activity android:name=".MahasiswaUpdateActivity" />
+        <activity android:name=".MahasiswaGetAllActivity" />
+        <activity android:name=".MahasiswaAddActivity" />
+        <activity android:name=".MahasiswaDeleteActivity" />
+        <activity
+            android:name=".MainMhsActivity"
+            android:label="Menu CRUD Mahasiswa" />
         <activity android:name=".CardActivity" />
         <activity android:name=".RecyclerActivity" />
         <activity android:name=".ListActivity" />
+        <activity android:name=".DebuggingActivity" />
         <activity android:name=".TrackerActivity" />
         <activity android:name=".HelpActivity" />
-        <activity android:name=".DebuggingActivity" />
         <activity android:name=".MainActivity" />
     </application>
 
